Paramaters first step

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -1,6 +1,7 @@
 title=Title
 appTitle=Joblist
 appDescription=App Description
+
 ####################################
 #          JobList
 ####################################
@@ -54,13 +55,12 @@ headerJobNumberLabel=Job number
 headerJobTypeLabel=Job type
 headerJobVersionLabel=Version
 
-
-tabObjectsList=Object list
+tabObjectsList=Output Data
 itemsNoDataText=No Original Files available
 
 #Original Files - Items Table
-itemsTitleCnt=Original Files ({0})
-itemsTitle=Original Files
+itemsTitleCnt=Object List ({0})
+itemsTitle=Object List
 itemsAddNewBtn=Add New Document
 itemsOutputLabel=Output
 itemsStatusLabel=Status
@@ -74,6 +74,12 @@ itemsClearFilterBtn=Clear all Filters
 itemsNoObjSel=No Originals selected
 itemsNoPrintDataLabel = Print Data
 itemsNoPrintSelLabel = Print Data Sel
+
+#Parameter List
+paramTitleCnt= Job Parameters ({0})
+paramTitle=Job Parameters
+paramIDLabel= Parameter ID
+paramValueLabel= Value
 
 #Footer
 footerCancelBtn=Cancel
