Edit mode for Parameter View

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -78,6 +78,8 @@ itemsNoPrintSelLabel = Print Data Sel
 #Parameter List
 paramTitleCnt= Job Parameters ({0})
 paramTitle=Job Parameters
+paramOptionJob = Job
+paramOptionObject = Object
 paramIDLabel= Parameter ID
 paramValueLabel= Value
 
